fixed blog title and date overlapping in phone view

--- a/cos/static/css/custom.css
+++ b/cos/static/css/custom.css
@@ -48,7 +48,7 @@ body {
 }
 
 #logoimg {
-    width: 320px;
+    width: 350px;
 }
 
 /*News Page*/
